--- a/assets/stylesheets/diagram.css
+++ b/assets/stylesheets/diagram.css
@@ -17,7 +17,7 @@ text {
     fill: #fff;
     font-family: sans-serif;
     font-size: 11pt;
-    text-anchor: middle;
+    dominant-baseline: text-before-edge
 }
 
 .sprotty-edge {
