--- a/assets/stylesheets/diagram.css
+++ b/assets/stylesheets/diagram.css
@@ -11,19 +11,24 @@
     stroke-width: 2;
 }
 
-text {
+text.status-label {
     stroke-width: 0;
     stroke: #fff;
     fill: #fff;
     font-family: sans-serif;
     font-size: 11pt;
-    dominant-baseline: text-before-edge
+    text-anchor: middle;
+    dominant-baseline: middle
 }
 
-.sprotty-edge {
+.workflow-transition {
     fill: none;
     stroke: #488;
     stroke-width: 2;
+}
+
+.arrow {
+    fill: #488;
 }
 
 svg {
