Add stimulus.js and visiblity controller

--- a/app/views/workflow_diagrams/_checker.erb
+++ b/app/views/workflow_diagrams/_checker.erb
@@ -1,4 +1,4 @@
-<%= tag.div :class => [:checker, (:hidden if hidden)] do %>
+<%= tag.div :class => [:checker, (:hidden if hidden)], :data => { "visibility-target" => "element"} do %>
   <%= title %>
   <ul>
     <% obj.each do |e| %>
